# RustCMS

./: .codacy.yml  .dockerignore  .editorconfig  .env.example  .env.minimal  .gitignore  .pre-commit-config.yaml  APPCONTAINER_FIX_GUIDE.md  ARCHITECTURE.md  BUILD_FIX_REPORT.md  CHANGELOG.md  CLI.md  CODE_IMPROVEMENT_SUMMARY.md  CONTRIBUTING.md  Cargo-lightweight-temp.toml  Cargo-minimal.toml  Cargo.toml  Cargo_core.toml  Cargo_minimal.toml  Cargo_minimal_ssl.toml  Cargo_production.toml  DATABASE_LAYER_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DOPPLER_SETUP.md  DUPLICATION_ANALYSIS.md  Dockerfile  Dockerfile.security  EVENT_SYSTEM_FINAL_REPORT.md  EVENT_SYSTEM_IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_EXECUTION_GUIDE.md  LEGACY_CODE_REMOVAL_PLAN.md  LICENSE  LIGHTWEIGHT_REFACTORING_REPORT.md  MEMORY_MANAGEMENT_REPORT.md  MIGRATION_CHECKLIST.md  NEXT_STEPS.md  PHASE1-3_RESTRUCTURE_COMPLETION_REPORT.md  PHASE10_LEGACY_REMOVAL_STRATEGY.md  PHASE2_3_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  (+117 more)
.codacy/: codacy.yaml
.github/: CI_KEYS.md  DEPENDABOT.md  PR_GEN_BISCUIT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: phase4_removal_checklist.md
.github/instructions/: codacy.instructions.md
.github/prs/: feature-gen-biscuit-backups.md
.github/workflows/: README.md  WORKFLOW_MIGRATION.md  benchmarks.yml  ci-docker-build.yml  ci-docker-build.yml.bak  ci.yml  ci.yml.bak  ci.yml.bak-for-patch  ci.yml.mergebak  coverage.yml  docker-release.yml  docker-release.yml.bak  docker.yml  gemini-dispatcher.yml  rust.yml  security-scan.yml  security.yml
.serena/: project.yml
.serena/memories/: project_overview.md  refactoring_validation_tests_summary.md  suggested_commands.md
backups/: biscuit_private.b64.bak.1756194491  biscuit_public.b64.bak.1756194491
benches/: IMPROVEMENTS.md  README.md  auth_benchmark.rs  cache_benchmark.rs  database_benchmark.rs  phase5_3_performance.rs  search_benchmark.rs
benches/analyzer/: mod.rs
benches/common/: mod.rs
config/: default.toml  production.toml
crates/application/: Cargo.toml
crates/application/src/: README.md  category.rs  comment.rs  lib.rs  post.rs  user.rs
crates/application/src/common/: mod.rs  types.rs
crates/application/src/dto/: comment.rs  common.rs  post.rs  user.rs
crates/application/src/ports/: cache.rs  events.rs  post_repository.rs  repositories.rs  search.rs  user_repository.rs
crates/application/src/queries/: mod.rs  post_queries.rs  user_queries.rs
crates/application/src/use_cases/: mod.rs
crates/application/src/use_cases/user/: suspend_user.rs
crates/domain/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: app_state.rs  lib.rs  mod.rs
crates/infrastructure/src/auth/: error.rs  jwt.rs  mod.rs  service.rs  session.rs  unified_context.rs  unified_key_management.rs
crates/infrastructure/src/common/: error.rs  mod.rs
crates/infrastructure/src/config/: mod.rs
crates/infrastructure/src/database/: connection.rs  repositories.rs  unit_of_work.rs
crates/infrastructure/src/events/: bus.rs  listeners.rs  mod.rs
crates/infrastructure/src/use_cases/: examples_unit_of_work.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shared-core/: Cargo.toml
crates/shared-core/src/: error.rs  lib.rs
crates/shared-core/src/helpers/: cache_helpers.rs  date.rs  deprecation.rs  mod.rs  url_encoding.rs
crates/shared-core/src/types/: api_types.rs  common_types.rs  mod.rs  paginate.rs
crates/shared-core/src/validation/: mod.rs
deprecated_cargo_variants/: Cargo-minimal.toml  Cargo_core.toml  Cargo_minimal.toml  Cargo_minimal_ssl.toml  Cargo_production.toml
docs/: ADMIN_CLI.md  API.md  API_V1_TO_V2_MIGRATION_GUIDE.md  API_V1_TO_V2_MIGRATION_GUIDE_COMPREHENSIVE.md  AUTH_CONSOLIDATION.md  AUTH_MIGRATION_GUIDE.md  AUTH_MIGRATION_V2.md  BISCUIT.md  BISCUIT_UNIFIED_AUTH.md  COMMENTING_GUIDE.md  FEATURES_JA.md  GLOSSARY_JA.md  INTEGRATION_COMPLETE.md  MIGRATE_REFACTORING.md  MODULES_OVERVIEW.md  REFACTORING_AUTH_UNIFIED_KEYS.md  UNIT_OF_WORK_DESIGN.md
examples/: admin_operations.rs  basic_auth.rs  create_post.rs  search_query.rs  url_encoding_demo.rs
frontend/next-cms/: README.md  (+6 more)
lightweight-cms/: Cargo.toml
lightweight-cms/src/: main.rs
migrations/: 001_initial.sql  002_production_schema.sql  003_production_schema.sql
repo-mirror.git/: config  packed-refs
scripts/: clippy-strict.sh  deprecation-auto-guidance.sh  deprecation-scan.sh  deprecation-strict-check.sh  generate_phase4_pr.sh  phase4-removal-plan.sh  pin-github-actions.sh  pin_github_actions.py  pre-commit-gitleaks.sh  verify-auth-unification.sh
simple-cms/: Cargo.toml  diesel.toml
simple-cms/src/: database.rs  main.rs  models.rs  schema.rs
src/: app.rs  doppler.rs  error.rs  events.rs  lib.rs  listeners.rs  main.rs  memory_management.rs  openapi.rs  routes.rs  schema.rs  telemetry.rs
templates/: home.html  redoc-ui.html  simple_cms_docs.html  swagger-ui.html
tests/: admin_permission_tests.rs  admin_user_helpers.rs  api_endpoint_comprehensive_tests.rs  api_info_alias_tests.rs.disabled  api_key_list_tests.rs  api_key_model_tests.rs  api_key_model_tests.rs.disabled  api_ok_tests.rs  api_ok_tests.rs.disabled  api_response_tests.rs  api_types_tests.rs  auth_flow_tests.rs  auth_header_parse.rs  auth_success_flatten_consistency.rs  auth_success_flatten_runtime.rs  benchmark_tests.rs  biscuit_authorizer_tests.rs  biscuit_refresh_negative_tests.rs  biscuit_refresh_session_missing_tests.rs  biscuit_refresh_tamper_tests.rs  biscuit_token_flow_tests.rs  cache_tests.rs  caching_rate_limiting_tests.rs  cli_help_test.rs  cli_tests.rs  contract_snapshots.rs  database_comprehensive_tests.rs  deprecation_headers_integration.rs  deprecation_headers_test.rs  domain_extended_tests.rs  e2e_api_v1_compatibility.rs  e2e_api_v2_complete.rs  e2e_http_staging.rs  e2e_staging_integration.rs  error_handling_comprehensive_tests.rs  error_handling_tests.rs  error_response_tests.rs  event_integration_tests.rs  event_integration_tests.rs.disabled  event_system_tests.rs  (+48 more)
(+281 files in other folders)
