[package]
name = "cms-backend"
version = "2.0.0"
edition = "2021"
authors = ["CMS Development Team"]
description = "Enterprise-grade scalable CMS backend with PostgreSQL, Diesel ORM, Tantivy search, biscuit-auth, WebAuthn, and rustls (Pure Rust)"
license = "MIT"
repository = "https://github.com/jungamer-64/Rust-CMS"
keywords = ["cms", "backend", "postgresql", "tantivy", "biscuit-auth", "webauthn", "enterprise"]
categories = ["web-programming", "database"]

[lib]
name = "cms_backend"
path = "src/lib.rs"

[[bin]]
name = "cms-server"
path = "src/main.rs"

[[bin]]
name = "cms-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "cms-admin"
path = "src/bin/admin.rs"

[dependencies]
# ===== WEB FRAMEWORK =====
axum = { version = "0.7", features = ["multipart", "ws", "macros", "form"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie", "query", "form"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit", "timeout", "request-id", "auth", "sensitive-headers", "compression-gzip", "normalize-path"], default-features = false }
hyper = { version = "1.0", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http2"], default-features = false }

# ===== ASYNC RUNTIME =====
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# ===== SERIALIZATION =====
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"

# ===== DATABASE & ORM (PostgreSQL + Diesel) =====
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "network-address", "time"], optional = true }
diesel_migrations = { version = "2.1", optional = true }
diesel-derive-enum = { version = "2.1", optional = true }
r2d2 = { version = "0.8", optional = true }
deadpool-diesel = { version = "0.5", features = ["postgres", "rt_tokio_1"], optional = true }

# ===== SEARCH ENGINE =====
# Using Tantivy with ruzstd for pure Rust implementation
tantivy = { version = "0.24", features = ["mmap"], default-features = false, optional = true }

# ===== AUTHENTICATION & SECURITY =====
# Modern token-based authentication with biscuit (Pure Rust)
biscuit-auth = { version = "4.1", optional = true }
# WebAuthn for passwordless authentication (Pure Rust)
# Note: Temporarily disabled due to OpenSSL dependency conflict
# webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"], optional = true }
# Password hashing (Pure Rust)
argon2 = { version = "0.5", optional = true }
# JWT tokens for compatibility (rustls only)
jsonwebtoken = { version = "9.2", default-features = false, features = ["use_pem"], optional = true }
# OAuth2 support (rustls only)
oauth2 = "4.4"

# ===== CACHING (Redis + In-Memory) =====
redis = { version = "0.24", features = ["tokio-rustls-comp", "serde_json", "cluster", "streams"], default-features = false, optional = true }
deadpool-redis = { version = "0.15", optional = true }
moka = { version = "0.12", features = ["future"] }

# ===== TLS & CRYPTOGRAPHY (rustls only, no OpenSSL) =====
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-webpki = "0.102"
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"

# ===== UTILITIES =====
uuid = { version = "1.7", features = ["v4", "v7", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
url = { version = "2.5", features = ["serde"] }
percent-encoding = "2.3"
urlencoding = "2.1"
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"

# ===== ERROR HANDLING =====
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"

# ===== LOGGING & MONITORING (Comprehensive) =====
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "fmt"] }
tracing-opentelemetry = { version = "0.21" }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
metrics = { version = "0.22.4", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }
prometheus = { version = "0.13", optional = true }
metrics-prometheus = { version = "0.6", optional = true }

# ===== CONFIGURATION =====
config = { version = "0.14", features = ["yaml", "toml", "json"] }
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive", "env"] }

# ===== VALIDATION =====
validator = { version = "0.18", features = ["derive", "unic"] }
garde = { version = "0.18", features = ["derive"] }

# ===== MEDIA PROCESSING (Production) =====
image = { version = "0.24", features = ["jpeg", "png", "webp", "avif"], default-features = false }
mime = "0.3"
mime_guess = "2.0"
tempfile = "3.8"

# ===== HTTP CLIENT (rustls only) =====
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }

# ===== COMPRESSION (Pure Rust implementations) =====
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
brotli = { version = "3.5", default-features = false }
ruzstd = "0.5"

# ===== RATE LIMITING & SECURITY =====
governor = "0.6"
nonzero_ext = "0.3"

# ===== ENCODING =====
base64 = "0.22"
hex = "0.4"

# ===== RANDOM =====
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"

# ===== OPENAPI DOCUMENTATION (Complete) =====
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid", "preserve_order", "openapi_extensions"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
utoipa-redoc = { version = "3.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0", features = ["axum"] }

# ===== EMAIL (Production with rustls) =====
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false, optional = true }

# ===== WEBSOCKETS (rustls) =====
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"], default-features = false }
 
[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rstest = "0.18"
serial_test = "3.0"
pretty_assertions = "1.4"
insta = "1.34"
mockall = "0.12"
wiremock = "0.5"

# CLI integration test helpers
assert_cmd = "2.0"
predicates = "2.1"

# ===== CLI DEPENDENCIES =====
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
num_cpus = "1.16"
rand = "0.8"

# ===== FEATURES (Enterprise Production) =====
[features]
# Default production features - core functionality without WebAuthn for now
default = ["database", "search", "cache", "auth", "email", "monitoring", "compression"]

# Core database functionality with PostgreSQL and Diesel
database = [
    "dep:diesel", 
    "dep:diesel_migrations", 
    "dep:diesel-derive-enum", 
    "dep:deadpool-diesel",
    "dep:r2d2"
]

# Full-text search functionality with Tantivy (Pure Rust)
search = ["dep:tantivy"]

# Distributed caching with Redis
cache = ["dep:redis", "dep:deadpool-redis"]

# Advanced authentication system
auth = [
    "dep:biscuit-auth", 
    "dep:jsonwebtoken", 
    "dep:argon2"
]

# WebAuthn passwordless authentication (Pure Rust)
# Note: Temporarily disabled due to OpenSSL dependency
# webauthn = [
#     "auth",
#     "dep:webauthn-rs"
# ]

# Email functionality
email = ["dep:lettre"]

# Monitoring and metrics
monitoring = [
    "dep:prometheus", 
    "dep:metrics", 
    "dep:metrics-prometheus"
]

# HTTP compression
compression = []

# Development features
dev = ["database", "auth"]

# Minimal features for testing
minimal = []

# Full production setup
production = ["default"]

# Development and testing
development = ["search", "monitoring"]

# ===== BUILD PROFILES (Optimized) =====
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true
incremental = true

[profile.test]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
debug = false

# ===== CARGO CONFIGURATION =====
[workspace]
resolver = "2"

# ===== METADATA =====
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ===== PATCH: unify metrics version =====
[patch.crates-io]
