[package]
name = "cms-backend"
version = "3.0.0"
edition = "2024"
authors = ["CMS Development Team"]
description = "scalable CMS backend with PostgreSQL, Diesel ORM, Tantivy search, biscuit-auth, WebAuthn, and rustls (Pure Rust)"
license = "MIT"
repository = "https://github.com/jungamer-64/Rust-CMS"
keywords = ["cms", "backend", "postgresql", "tantivy", "biscuit-auth", "webauthn", "rustls", "diesel", "axum", "rust"]
categories = ["web-programming", "database"]
autobins = false
default-run = "cms-server"




[lib]
name = "cms_backend"
path = "src/lib.rs"

[[bin]]
name = "cms-server"
path = "src/main.rs"
# NOTE: This unified binary integrates functionality from cms-lightweight, cms-simple, and cms-unified
# It serves as the single entry point for the RustCMS backend

[[bin]]
name = "cms-migrate"
path = "src/bin/migrate.rs"
required-features = ["database"]

[[bin]]
name = "cms-admin"
path = "src/bin/admin.rs"

[[bin]]
name = "benchmark-analyzer"
path = "src/bin/benchmark_analyzer.rs"

[dependencies]
rpassword = "7.3"
comfy-table = "7.1"
# ===== WEB FRAMEWORK =====
axum = { version = "0.8", features = ["multipart", "ws", "macros", "form"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie", "query", "form"] }
hyper = { version = "1.6", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "ring", "webpki-roots"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit", "timeout", "request-id", "auth", "sensitive-headers", "compression-gzip", "normalize-path"], default-features = false }

# ===== ASYNC RUNTIME =====
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

# Async trait helper for ergonomic async in traits
async-trait = "0.1"

# ===== SERIALIZATION =====
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.9"

# ===== DATABASE & ORM (PostgreSQL + Diesel) =====
deadpool-diesel = { version = "0.6", features = ["postgres", "rt_tokio_1"], optional = true }
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "network-address", "time"], optional = true }
diesel-derive-enum = { version = "2.1", optional = true }
diesel_migrations = { version = "2.1", optional = true }
r2d2 = { version = "0.8", optional = true }

# ===== SEARCH ENGINE =====
# Using Tantivy with ruzstd for pure Rust implementation
tantivy = { version = "0.25", features = ["mmap"], default-features = false, optional = true }

# ===== AUTHENTICATION & SECURITY =====
argon2 = { version = "0.5", optional = true }
biscuit-auth = { version = "6.0", optional = true }
oauth2 = "5.0.0-rc.1"

# ===== CACHING (Redis + In-Memory) =====
deadpool-redis = { version = "0.22.0", optional = true }
moka = { version = "0.12", features = ["future"] }
# Use conservative tokio-compatible redis features without enabling rustls-native-certs
# `tokio-rustls-comp` pulls in rustls-native-certs -> openssl-probe; replace it with `tokio-comp`
redis = { version = "0.32.5", features = ["tokio-comp", "cluster", "streams"], default-features = false, optional = true }

# ===== TLS & CRYPTOGRAPHY (rustls only, no OpenSSL) =====
aes-gcm = "0.10"
hmac = "0.12"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.0"
rustls-webpki = "0.103"
sha2 = "0.10"

# ===== UTILITIES =====
chrono = { version = "0.4", features = ["serde", "clock"] }
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
percent-encoding = "2.3"
regex = "1.10"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.18.0", features = ["v4", "v7", "serde", "fast-rng"] }

# ===== ERROR HANDLING =====
anyhow = "1.0"
color-eyre = "0.6"
thiserror = "2.0"

# ===== LOGGING & MONITORING (Comprehensive) =====
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", optional = true }
metrics-prometheus = { version = "0.11", optional = true }
opentelemetry = { version = "0.31"}
opentelemetry-jaeger = { version = "0.22", features = ["rt-tokio"] }
prometheus = { version = "0.14", optional = true }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = { version = "0.32" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "fmt"] }
tracing-appender = "0.2"
log = "0.4"

# ===== CONFIGURATION =====
clap = { version = "4.4", features = ["derive", "env"] }
config = { version = "0.15", features = ["yaml", "toml", "json"] }
dotenvy = "0.15"
secrecy = { version = "0.10", features = ["serde"] }

# ===== VALIDATION =====
garde = { version = "0.22", features = ["derive"] }
validator = { version = "0.20", features = ["derive", "unic"] }

# ===== MEDIA PROCESSING (Production) =====
# NOTE: Temporarily removing the `avif` feature to avoid pulling in the
# `ravif`/`rav1e` -> `paste` transitive chain (RUSTSEC-2024-0436). If AVIF
# support is required, we'll evaluate alternate crates or a maintained upstream
# that doesn't depend on `paste`.
image = { version = "0.25", features = ["jpeg", "png", "webp"], default-features = false }
mime = "0.3"
mime_guess = "2.0"
tempfile = "3.8"

# ===== HTTP CLIENT (rustls only) =====
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }

# ===== COMPRESSION (Pure Rust implementations) =====
brotli = { version = "8.0", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
ruzstd = "0.8"

# ===== RATE LIMITING & SECURITY =====
governor = "0.10"
nonzero_ext = "0.3"

# ===== ENCODING =====
base64 = "0.22"
hex = "0.4"

# ===== RANDOM =====
rand = { version = "0.9", features = ["std_rng"] }
rand_chacha = "0.9"

# ===== OPENAPI DOCUMENTATION (Complete) =====
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "preserve_order", "openapi_extensions"] }
utoipa-rapidoc = { version = "6.0", features = ["axum"] }
utoipa-redoc = { version = "6.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# ===== EMAIL (Production with rustls) =====
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false, optional = true }

# ===== WEBSOCKETS (rustls) =====
tokio-tungstenite = { version = "0.28", features = ["__rustls-tls"], default-features = false }
libloading = "0.8.9"
matchit = "0.8.4"
 
[dev-dependencies]
# Development and test helpers (alphabetical)
assert_cmd = "2.0"
criterion = { version = "0.7", features = ["html_reports"] }
insta = { version = "1.34", features = ["json"] }
mockall = "0.13"
predicates = "3.1"
pretty_assertions = "1.4"
proptest = "1.4"
rstest = "0.26"
serial_test = "3.0"
tempfile = "3.8"
# TEMP: disable testcontainers until bollard version alignment resolved
# testcontainers = "0.25"
tokio-test = "0.4"
wiremock = "0.6"
http-body-util = { version = "0.1", package = "http-body-util" }
temp-env = "0.3"

# ===== CLI DEPENDENCIES =====
# Runtime CLI-only dependencies (alphabetical)
num_cpus = "1.16"
rpassword = "7.3"

# ===== FEATURES (Production) =====
[features]
# Feature list (alphabetical keys). Arrays are sorted for consistency.
auth = ["dep:argon2", "dep:biscuit-auth"]
cache = ["dep:deadpool-redis", "dep:redis"]
dev-tools = []
compression = []
database = ["dep:deadpool-diesel", "dep:diesel", "dep:diesel-derive-enum", "dep:diesel_migrations", "dep:r2d2"]
default = ["auth", "cache", "compression", "database", "email", "search"]
development = ["monitoring", "search"]
dev = ["auth", "database"]
email = ["dep:lettre"]
minimal = []
monitoring = ["dep:metrics", "dep:metrics-prometheus", "dep:prometheus"]
production = ["default"]
search = ["dep:tantivy"]

# ===== BUILD PROFILES (Optimized) =====
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true
incremental = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.test]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false


# ===== CARGO CONFIGURATION =====
[workspace]
resolver = "2"

# ===== METADATA =====
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.deprecated_cargo_variants]
files = ["Cargo_core.toml", "Cargo_minimal.toml", "Cargo_minimal_ssl.toml", "Cargo_production.toml", "Cargo-minimal.toml"]




# ===== OPTIONAL BINARIES (DEV TOOLS) =====
[[bin]]
name = "run_docs"
path = "src/bin/run_docs.rs"
required-features = ["dev-tools"]

[[bin]]
name = "dump_openapi"
path = "src/bin/dump_openapi.rs"
required-features = ["dev-tools"]

[[bin]]
name = "gen_biscuit_keys"
path = "src/bin/gen_biscuit_keys.rs"

[[bin]]
name = "dump_docs"
path = "src/bin/dump_docs.rs"
required-features = ["dev-tools"]

[[bin]]
name = "db_check"
path = "src/bin/db_check.rs"
required-features = ["dev-tools"]

[[bin]]
name = "setup"
path = "src/bin/setup.rs"
required-features = ["dev-tools"]

[[bin]]
name = "env-check"
path = "src/bin/env-check.rs"
required-features = ["dev-tools"]

[[bin]]
name = "add_sample_post"
path = "src/bin/add_sample_post.rs"
required-features = ["dev-tools"]

[[bin]]
name = "admin_cli_test"
path = "src/bin/admin_cli_test.rs"
required-features = ["dev-tools"]

[[bin]]
name = "admin_server"
path = "src/bin/admin_server.rs"

[[bin]]
name = "rotate_api_key"
path = "src/bin/rotate_api_key.rs"
required-features = ["auth", "database"]

[[bin]]
name = "run_with_router"
path = "src/bin/run_with_router.rs"
required-features = ["dev-tools"]

[[bin]]
name = "simple-server"
path = "src/bin/simple-server.rs"
required-features = ["dev-tools"]

[[bin]]
name = "backfill_api_key_lookup"
path = "src/bin/backfill_api_key_lookup.rs"
required-features = ["database", "auth"]


[[bin]]
name = "dev-tools"
path = "src/bin/dev_tools.rs"
required-features = ["dev-tools"]



