[package]
name = "lightweight-cms"
version = "1.0.0"
edition = "2021"
authors = ["CMS Development Team"]
description = "Ultra-lightweight CMS backend with minimal dependencies"
license = "MIT"

[dependencies]
# Core web framework (minimal)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for IDs
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# Basic utilities
chrono = { version = "0.4", features = ["serde", "clock"] }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
