[package]
name = "cms-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database (PostgreSQL + Diesel)
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = "2.1"
r2d2 = "0.8"

# Search (Elasticsearch)
elasticsearch = "8.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenvy = "0.15"

# Async utilities
futures = "0.3"

[[bin]]
name = "cms-simple"
path = "src/main.rs"
