[package]
name = "application"
version = "0.1.0"
edition = "2024"

[features]
default = ["database"]
database = ["diesel"]

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive", "unic"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "preserve_order", "openapi_extensions"] }
diesel = { version = "2.3", features = ["postgres", "uuid", "chrono", "r2d2"], optional = true }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread"] }
