[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
# Layer dependencies
application = { path = "../application" }
domain = { path = "../../crates/domain" }
shared-core = { path = "../shared-core", features = ["password"] }

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (Diesel + PostgreSQL)
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric"], optional = true }
r2d2 = { version = "0.8", optional = true }

# Authentication & Cryptography
biscuit-auth = "6.0"
ed25519-dalek = "2.1"
argon2 = { version = "0.5", optional = true }
bcrypt = { version = "0.16", optional = true }
jsonwebtoken = "9.3"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2.0"
once_cell = "1.19"
secrecy = { version = "0.10", features = ["serde"] }
utoipa = "5.4"
config = "0.15"
dotenvy = "0.15"

[features]
default = ["password", "database"]
password = ["argon2", "bcrypt"]
database = ["diesel"]
