[package]
name = "shared-core"
version = "0.1.0"
edition = "2024"
authors = ["CMS Development Team"]
description = "Core shared types, errors, and utilities for RustCMS"
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }

# Helper module dependencies
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
regex = "1.12"
once_cell = "1.20"
percent-encoding = "2.3"
urlencoding = "2.1"

# Optional dependencies
argon2 = { version = "0.5", optional = true, features = ["std"] }
bcrypt = { version = "0.16", optional = true }

# Axum関連 (API型で必要)
axum = { version = "0.8", optional = true }
http = { version = "1.2", optional = true }

[features]
default = []
password = ["argon2", "bcrypt"]
web = ["axum", "http"]
